tests/compile-fail/seal_violation.stderr
error[E0277]: the trait bound `FakeEngine: private::Sealed` is not satisfied
  --> tests/compile-fail/seal_violation.rs:18:36
   |
18 | impl griot::sealed::EngineCore for FakeEngine {
   |                                    ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `private::Sealed` is not implemented for `FakeEngine`
  --> tests/compile-fail/seal_violation.rs:14:1
   |
14 | struct FakeEngine;
   | ^^^^^^^^^^^^^^^^^
   = note: `FakeEngine` implements similarly named trait `unicode_width::private::Sealed`, but not `private::Sealed`
help: the trait `private::Sealed` is implemented for `K04DEngine`
  --> src/lib.rs
   |
   | impl sealed::private::Sealed for K04DEngine {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `EngineCore`
  --> src/lib.rs
   |
   |     pub trait EngineCore: private::Sealed {
   |                           ^^^^^^^^^^^^^^^ required by this bound in `EngineCore`
   = note: `EngineCore` is a "sealed trait", because to implement it you also need to implement `griot::sealed::private::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             griot::K04DEngine
